# CompilerDesign

./: .gitignore  AST.cpp  AST.hpp  CMakeLists.txt  Compile.cpp  Compile.hpp  README.md  calc-test-file.txt  calculator.cpp  calculator.hpp  decl.cpp  decl.hpp  eval.cpp  eval.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  scope.cpp  statement.cpp  statement.hpp  symbol.cpp  symbol.hpp  test.cpp  token.cpp  type.cpp  type.hpp  type_check.cpp  type_check.hpp
AST/: eval.hpp  type_check.cpp  type_check.hpp
codegen/: codegen.cpp  codegen.hpp
codegen/llvm/: llvm_gen.cpp  llvm_gen.hpp
lexer/: lexer.cpp  lexer.hpp  token.hpp
parser/: decl.cpp  decl.hpp  parser.cpp  parser.hpp  scope.cpp  scope.hpp  statement.cpp  statement.hpp
